Estructura general finalizada
Se agregaron imágenes y se completaron estilos.

--- a/index.html
+++ b/index.html
@@ -5,46 +5,66 @@
         <meta charset="utf-8">
         <title>Comenzando con la fotografía</title>
         <link rel="stylesheet" href="css/estilos.css">
+        <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     </head>
 
     <body>
         <div id="contenedor">
             <header>
-                <div id="titulo">
-                    Comenzando con la fotografía
+                <div id="cabecera">
+                    <p class="titulo">
+                        Comenzando con la fotografía
+                    </p>
+                    <p class="menu">
+                        <a href="#" id="actual">Inicio</a>
+                        <a href="#">Paisajes</a>
+                        <a href="#">Retratos</a>
+                    </p>
                 </div>
-                <nav id="menu">
-                    <a href="#">Inicio</a>
-                    <a href="#">Paisajes</a>
-                    <a href="#">Retratos</a>
-                </nav>
             </header>
             <div id="imagen_central">
-                imagen central
-                <p>img1</p>
+                <img src="imagenes/paisajes_web_thumb.jpg">
             </div>
-            <div id="imagen_alterna">
-                <div class="alterna_izq">
-                    <p>img2</p>
+            <div class="imagen_alterna">
+                <div id="alterna_izq">
+                    <a href="#">
+                        <img src="imagenes/paisajes_web_thumb.jpg">
+                        Paisajes
+                    </a>
                 </div>
-                <div class="alterna_der">
-                    <p>img3</p>
+                <div id="alterna_der">
+                    <a href="#">
+                        <img src="imagenes/paisajes_web_thumb.jpg">
+                        Retratos
+                    </a>
                 </div>
             </div>
 
             <footer>
                 <div id="pie">
-                    <div class="pie_elment">
-                        Col1
+                    <div class="pie_element">
+                        <h2>Contacto</h2>
+                        <p>
+                            Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.
+                        </p>
                     </div>
-                    <div class="pie_elment">
-                        Col2
+                    <div class="pie_element">
+                        <h2>Términos</h2>
+                        <p>
+                            Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.
+                        </p>
                     </div>
-                    <div class="pie_elment">
-                        Col3
+                    <div class="pie_element">
+                        <h2>Redes sociales</h2>
+                        <p>
+                            Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.
+                        </p>
                     </div>
-                    <div class="pie_elment">
-                        Col4
+                    <div class="pie_element">
+                        <h2>Derechos</h2>
+                        <p>
+                            Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.
+                        </p>
                     </div>
                 </div>
             </footer>
