--- a/paisajes.html
+++ b/paisajes.html
@@ -16,24 +16,31 @@
                         Comenzando con la fotografía
                     </p>
                     <p class="menu">
-                        <a href="#" id="actual">Inicio</a>
-                        <a href="paisajes.html">Paisajes</a>
+                        <a href="index.html">Inicio</a>
+                        <a href="#" id="actual">Paisajes</a>
                         <a href="retratos.html">Retratos</a>
                     </p>
                 </div>
             </header>
-            <div id="imagen_central">
-                <img src="imagenes/paisaje_thumb.jpg">
-            </div>
-            <div class="imagen_alterna">
-                <a href="paisajes.html" id="alterna_izq">
-                    <img src="imagenes/paisajes_web_thumb.jpg" class="izq">
-                    Paisajes
-                </a>
-                <a href="retratos.html" id="alterna_der">
-                    <img src="imagenes/retratos_web_thumb.jpg">
-                    Retratos
-                </a>
+            <div id="galeria">
+                <div class="galeria_element" id="psj1">
+                    <img src="imagenes/paisaje.png" alt="">
+                </div>
+                <div class="galeria_element" id="psj2">
+                    <img src="imagenes/paisaje.png" alt="">
+                </div>
+                <div class="galeria_element" id="psj3">
+                    <img src="imagenes/paisaje.png" alt="">
+                </div>
+                <div class="galeria_element" id="psj4">
+                    <img src="imagenes/paisaje.png" alt="">
+                </div>
+                <div class="galeria_element" id="psj5">
+                    <img src="imagenes/paisaje.png" alt="">
+                </div>
+                <div class="galeria_element" id="psj6">
+                    <img src="imagenes/paisaje.png" alt="">
+                </div>
             </div>
 
             <footer>
@@ -64,6 +71,7 @@
                     </div>
                 </div>
             </footer>
+
         </div>
     </body>
 
