MediaQuery para moviles
Redistribución del título, menu e imágenes de las galerías.

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                 <img src="imagenes/paisaje_thumb.jpg">
             </div>
             <div class="imagen_alterna">
-                <a href="paisajes.html" id="alterna_izq">
+                <a href="paisajes.html">
                     <img src="imagenes/paisajes_web_thumb.jpg" class="izq">
                     Paisajes
                 </a>
-                <a href="retratos.html" id="alterna_der">
-                    <img src="imagenes/retratos_web_thumb.jpg">
+                <a href="retratos.html">
+                    <img src="imagenes/retratos_web_thumb.jpg" class="der">
                     Retratos
                 </a>
             </div>
