--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             </div>
             <div class="imagen_alterna">
                 <a href="paisajes.html">
-                    <img src="imagenes/paisajes_web_thumb.jpg" class="izq">
+                    <img src="imagenes/paisajes_web_thumb.jpg" alt="Paisajes" class="izq"><br>
                     Paisajes
                 </a>
                 <a href="retratos.html">
-                    <img src="imagenes/retratos_web_thumb.jpg" class="der">
+                    <img src="imagenes/retratos_web_thumb.jpg" alt="Retratos" class="der"><br>
                     Retratos
                 </a>
             </div>
@@ -41,19 +41,24 @@
                     <div class="pie_element">
                         <h2>Contacto</h2>
                         <p>
-                            Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.
+                            <em>Email:</em> lenin1982@gmail.com <br>
+                            <em>Direccion:</em> COVITUC E-16 San Sebastian<br>
+                            <em>Teléfono:</em> (+51) 984381913
                         </p>
                     </div>
                     <div class="pie_element">
                         <h2>Términos</h2>
                         <p>
-                            Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.
+                            Al continuar navegando en este sitio web, declaras aceptar nuestros terminos y condiciones.
                         </p>
                     </div>
                     <div class="pie_element">
                         <h2>Redes sociales</h2>
                         <p>
-                            Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.
+                            Siguenos en nuestras redes: <br>
+                            <img src="imagenes/facebook.png" alt="Facebook"> /fotografia <br>
+                            <img src="imagenes/twitter.png" alt="Twitter"> @Fotografia <br>
+                            <img src="imagenes/googleplus.png" alt="Google Plus"> fotografia <br>
                         </p>
                     </div>
                     <div class="pie_element">
