--- a/paisajes.html
+++ b/paisajes.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Comenzando con la fotografía</title>
+        <title>Comenzando con los paisajes</title>
         <link rel="stylesheet" href="css/estilos.css">
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     </head>
@@ -13,7 +13,7 @@
             <header>
                 <div id="cabecera">
                     <p class="titulo">
-                        Comenzando con la fotografía
+                        Comenzando con los paisajes
                     </p>
                     <p class="menu">
                         <a href="index.html">Inicio</a>
@@ -24,22 +24,22 @@
             </header>
             <div id="galeria">
                 <div class="galeria_element" id="psj1">
-                    <img src="imagenes/paisaje.png" alt="">
+                    <img src="imagenes/paisaje.png" alt="Paisaje1">
                 </div>
                 <div class="galeria_element" id="psj2">
-                    <img src="imagenes/paisaje.png" alt="">
+                    <img src="imagenes/paisaje.png" alt="Paisaje2">
                 </div>
                 <div class="galeria_element" id="psj3">
-                    <img src="imagenes/paisaje.png" alt="">
+                    <img src="imagenes/paisaje.png" alt="Paisaje3">
                 </div>
                 <div class="galeria_element" id="psj4">
-                    <img src="imagenes/paisaje.png" alt="">
+                    <img src="imagenes/paisaje.png" alt="Paisaje4">
                 </div>
                 <div class="galeria_element" id="psj5">
-                    <img src="imagenes/paisaje.png" alt="">
+                    <img src="imagenes/paisaje.png" alt="Paisaje5">
                 </div>
                 <div class="galeria_element" id="psj6">
-                    <img src="imagenes/paisaje.png" alt="">
+                    <img src="imagenes/paisaje.png" alt="Paisaje6">
                 </div>
             </div>
 
@@ -48,19 +48,24 @@
                     <div class="pie_element">
                         <h2>Contacto</h2>
                         <p>
-                            Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.
+                            <em>Email:</em> lenin1982@gmail.com <br>
+                            <em>Direccion:</em> COVITUC E-16 San Sebastian<br>
+                            <em>Teléfono:</em> (+51) 984381913
                         </p>
                     </div>
                     <div class="pie_element">
                         <h2>Términos</h2>
                         <p>
-                            Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.
+                            Al continuar navegando en este sitio web, declaras aceptar nuestros terminos y condiciones.
                         </p>
                     </div>
                     <div class="pie_element">
                         <h2>Redes sociales</h2>
                         <p>
-                            Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.
+                            Siguenos en nuestras redes: <br>
+                            <img src="imagenes/facebook.png" alt="Facebook"> /fotografia <br>
+                            <img src="imagenes/twitter.png" alt="Twitter"> @Fotografia <br>
+                            <img src="imagenes/googleplus.png" alt="Google Plus"> fotografia <br>
                         </p>
                     </div>
                     <div class="pie_element">
